Remove some pictures, modify text.

--- a/index.html
+++ b/index.html
@@ -1,217 +1,209 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Malmberg poika Name-Giving</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Header -->
-    <header id="header"></header>
+    <head>
+        <title>Malmberg poika Name-Giving</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+        />
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <noscript
+            ><link rel="stylesheet" href="assets/css/noscript.css"
+        /></noscript>
+    </head>
+    <body class="is-preload">
+        <!-- Header -->
+        <header id="header"></header>
 
-    <!-- Intro -->
-    <section id="intro" class="main style1 dark fullscreen">
-      <div class="content">
-        <header>
-          <h2>Hej.</h2>
-        </header>
-        <p>
-          Welcome to <strong>Malmberg poika Name-Giving</strong> bla bla bla
-        </p>
-        <footer>
-          <a href="#one" class="button style2 down">More</a>
-        </footer>
-      </div>
-    </section>
+        <!-- Intro -->
+        <section id="intro" class="main style1 dark fullscreen">
+            <div class="content">
+                <header>
+                    <h2>Hej!</h2>
+                </header>
+                <p>
+                    Välkommen på mitt dop! <br />
+                    Tervetuloa ristiäisiini! <br />
+                    Welcome to my baptizing! <br />
+                </p>
+                <footer>
+                    <a href="#one" class="button style2 down">More</a>
+                </footer>
+            </div>
+        </section>
 
-    <!-- One -->
-    <section id="one" class="main style2 right dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>Who I Am</h2>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
-      </div>
-      <a href="#two" class="button style2 down anchored">Next</a>
-    </section>
+        <!-- One -->
+        <section id="one" class="main style2 right dark fullscreen">
+            <div class="content box style2">
+                <header>
+                    <h3>
+                        När och var? <br />
+                        Milloin ja missä? <br />
+                        When and where? <br />
+                    </h3>
+                </header>
+                <p>
+                    Dopet hålls i Vichtis församlingshus
+                    <strong>20.4.2024 kl. 14.00</strong>. <br /><br>
+                    Ristiäiset pidetään Vihtin seurakunnantalolla
+                    <strong>20.4.2024 klo 14.00</strong>. <br /><br>
+                    The baptizing will take place in Vihti seurakuntatalo
+                    <strong>20.4.2024 at 14.00</strong>. <br /><br />
 
-    <!-- Two -->
-    <section id="two" class="main style2 left dark fullscreen">
-      <div class="content box style2">
-        <header>
-          <h2>What I Do</h2>
-        </header>
-        <p>
-          Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-          condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-          eu. Sed sodales venenatis arcu, id varius justo euismod in. Curabitur
-          egestas consectetur magna.
-        </p>
-      </div>
-      <a href="#work" class="button style2 down anchored">Next</a>
-    </section>
+                    <strong>Niuhalanraitti 6, 03400 Vihti</strong>
+                </p>
+            </div>
+            <a href="#two" class="button style2 down anchored">Next</a>
+        </section>
 
-    <!-- Work -->
-    <section id="work" class="main style3 primary">
-      <div class="content">
-        <header>
-          <h2>My Journey So Far</h2>
-          <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum. Fusce blandit ultrices sapien, in accumsan orci rhoncus
-            eu. Sed sodales venenatis arcu, id varius justo euismod in.
-            Curabitur egestas consectetur magna vitae.
-          </p>
-        </header>
+        <!-- Two -->
+        <section id="two" class="main style2 left dark fullscreen">
+            <div class="content box style2">
+                <header>
+                    <h3>
+                        Meddela om ditt deltagande. <br />
+                        Ilmoita osallistumisestasi. <br />
+                        Send us a message regarding your presence. <br />
+                    </h3>
+                </header>
+                <p>
+                    Meddela mamma-Julia (040 5526067) hur många som deltar och
+                    ifall ni har några allergier. <br /><br />
 
-        <!-- Gallery  -->
-        <div class="gallery">
-          <article class="from-left">
-            <a href="images/fulls/01.jpg" class="image fit"
-              ><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/02.jpg" class="image fit"
-              ><img src="images/thumbs/02.jpg" title="Airchitecture II" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/03.jpg" class="image fit"
-              ><img src="images/thumbs/03.jpg" title="Air Lounge" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/04.jpg" class="image fit"
-              ><img src="images/thumbs/04.jpg" title="Carry on" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/05.jpg" class="image fit"
-              ><img
-                src="images/thumbs/05.jpg"
-                title="The sparkling shell"
-                alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/06.jpg" class="image fit"
-              ><img src="images/thumbs/06.jpg" title="Bent IX" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/07.jpg" class="image fit"
-              ><img src="images/thumbs/07.jpg" title="The Anonymous Red" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/08.jpg" class="image fit"
-              ><img src="images/thumbs/08.jpg" title="Airchitecture II" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/09.jpg" class="image fit"
-              ><img src="images/thumbs/09.jpg" title="Air Lounge" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/10.jpg" class="image fit"
-              ><img src="images/thumbs/10.jpg" title="Carry on" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/11.jpg" class="image fit"
-              ><img
-                src="images/thumbs/11.jpg"
-                title="The sparkling shell"
-                alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/12.jpg" class="image fit"
-              ><img src="images/thumbs/12.jpg" title="Bent IX" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/13.jpg" class="image fit"
-              ><img src="images/thumbs/13.jpg" title="The Anonymous Red" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/14.jpg" class="image fit"
-              ><img src="images/thumbs/14.jpg" title="Airchitecture II" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/15.jpg" class="image fit"
-              ><img src="images/thumbs/15.jpg" title="Air Lounge" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/16.jpg" class="image fit"
-              ><img src="images/thumbs/16.jpg" title="Carry on" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/17.jpg" class="image fit"
-              ><img
-                src="images/thumbs/17.jpg"
-                title="The sparkling shell"
-                alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/18.jpg" class="image fit"
-              ><img src="images/thumbs/18.jpg" title="Bent IX" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/19.jpg" class="image fit"
-              ><img src="images/thumbs/19.jpg" title="The Anonymous Red" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/20.jpg" class="image fit"
-              ><img src="images/thumbs/20.jpg" title="Airchitecture II" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <a href="images/fulls/21.jpg" class="image fit"
-              ><img src="images/thumbs/21.jpg" title="Air Lounge" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <a href="images/fulls/22.jpg" class="image fit"
-              ><img src="images/thumbs/22.jpg" title="Carry on" alt=""
-            /></a>
-          </article>
-        </div>
-      </div>
-    </section>
+                    Ilmoita mamma-Julialle (040 5526067) montako teitä on
+                    tulossa ja mahdolliset allergiat. <br /><br />
 
-    <!-- Contact -->
-    <section id="contact" class="main style3 secondary">
-      <div class="content">
-        <header>
-          <h2>Say Hello.</h2>
-          <p>
-            Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore
-            condimentum.
-          </p>
-        </header>
-        <!-- <div class="box">
+                    Send a message to mamma-Julia (040 5526067) how many of you
+                    will participate and if you have any allergies. <br /><br />
+                </p>
+            </div>
+            <a href="#work" class="button style2 down anchored">Next</a>
+        </section>
+
+        <!-- Work -->
+        <section id="work" class="main style3 primary">
+            <div class="content">
+                <header>
+                    <h2>Här är jag! Tässä minä olen! Here I am!</h2>
+                    <p>
+                        <strong
+                            >"Älsklingen" "Lilla vännen" "Lilla Päron"
+                            "Vietnamese submarine" "Jäbä" "Jäbäleisson" "Bạn
+                            nhỏ" "Skrutte" "Malmberg poika"</strong
+                        >
+                    </p>
+                </header>
+
+                <!-- Gallery  -->
+                <div class="gallery">
+                    <article class="from-left">
+                        <a href="images/fulls/01.jpg" class="image fit"
+                            ><img src="images/thumbs/01.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/02.jpg" class="image fit"
+                            ><img src="images/thumbs/02.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/03.jpg" class="image fit"
+                            ><img src="images/thumbs/03.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/04.jpg" class="image fit"
+                            ><img src="images/thumbs/04.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/05.jpg" class="image fit"
+                            ><img src="images/thumbs/05.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/06.jpg" class="image fit"
+                            ><img src="images/thumbs/06.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/07.jpg" class="image fit"
+                            ><img src="images/thumbs/07.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/08.jpg" class="image fit"
+                            ><img src="images/thumbs/08.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/09.jpg" class="image fit"
+                            ><img src="images/thumbs/09.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/10.jpg" class="image fit"
+                            ><img src="images/thumbs/10.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/11.jpg" class="image fit"
+                            ><img src="images/thumbs/11.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/12.jpg" class="image fit"
+                            ><img src="images/thumbs/12.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/13.jpg" class="image fit"
+                            ><img src="images/thumbs/13.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/14.jpg" class="image fit"
+                            ><img src="images/thumbs/14.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-left">
+                        <a href="images/fulls/15.jpg" class="image fit"
+                            ><img src="images/thumbs/15.jpg" alt=""
+                        /></a>
+                    </article>
+                    <article class="from-right">
+                        <a href="images/fulls/16.jpg" class="image fit"
+                            ><img src="images/thumbs/16.jpg" alt=""
+                        /></a>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact -->
+        <section id="contact" class="main style3 secondary">
+            <div class="content">
+                <header>
+                    <h3>
+                        Kärt barn har många namn, men nu har mamma och bố valt
+                        vad jag ska heta PÅRIKTIGT. <br />
+                        Vill du höra vad det är och fira tillfället tillsammans
+                        med mig? Kom på plats den 20.4! <br /><br />
+
+                        Rakkaalla lapsella on monta nimeä, mutta nyt mamma ja bố
+                        ovat valinneet minulle ihan OIKEAN nimen. <br />
+                        Haluatko kuulla mikä se on ja juhlistaa tilaisuutta
+                        kanssani? Tule paikalle 20.4! <br /><br />
+
+                        A loved child has many names, but now mamma and bố has
+                        chosen an ACTUAL name for me. <br />
+                        Do you want to hear what it is and celebrate the
+                        occasion with me? Be there on 20.4! <br />
+                    </h3>
+                    <p></p>
+                </header>
+                <!-- <div class="box">
           <form method="post" action="#">
             <div class="fields">
               <div class="field half">
@@ -233,17 +225,17 @@
             </ul>
           </form>
         </div> -->
-      </div>
-    </section>
+            </div>
+        </section>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.poptrox.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+        <!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.poptrox.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+    </body>
 </html>
