Add more nickname

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </header>
                 <p>
                     Dopet hålls i Vichtis församlingshus
-                    <strong>20.4.2024 kl. 14.00</strong>. <br /><br>
+                    <strong>20.4.2024 kl. 14.00</strong>. <br /><br />
                     Ristiäiset pidetään Vihtin seurakunnantalolla
-                    <strong>20.4.2024 klo 14.00</strong>. <br /><br>
+                    <strong>20.4.2024 klo 14.00</strong>. <br /><br />
                     The baptizing will take place in Vihti seurakuntatalo
                     <strong>20.4.2024 at 14.00</strong>. <br /><br />
 
@@ -90,7 +90,8 @@
                         <strong
                             >"Älsklingen" "Lilla vännen" "Lilla Päron"
                             "Vietnamese submarine" "Jäbä" "Jäbäleisson" "Bạn
-                            nhỏ" "Skrutte" "Malmberg poika"</strong
+                            nhỏ" "Skrutte" "Malmberg poika" "Little Dude"
+                            "Lillisen" "Kakkakone"</strong
                         >
                     </p>
                 </header>
