Resize pictures, add list

--- a/index.html
+++ b/index.html
@@ -37,22 +37,35 @@
         <section id="one" class="main style2 right dark fullscreen">
             <div class="content box style2">
                 <header>
-                    <h3>
-                        När och var? <br />
-                        Milloin ja missä? <br />
-                        When and where? <br />
-                    </h3>
+                    <ul>
+                        <li><h3>När och var?</h3></li>
+                        <li><h3>Milloin ja missä?</h3></li>
+                        <li><h3>When and where?</h3></li>
+                    </ul>
                 </header>
-                <p>
-                    Dopet hålls i Vichtis församlingshus
-                    <strong>20.4.2024 kl. 14.00</strong>. <br /><br />
-                    Ristiäiset pidetään Vihtin seurakunnantalolla
-                    <strong>20.4.2024 klo 14.00</strong>. <br /><br />
-                    The baptizing will take place in Vihti seurakuntatalo
-                    <strong>20.4.2024 at 14.00</strong>. <br /><br />
-
-                    <strong>Niuhalanraitti 6, 03400 Vihti</strong>
-                </p>
+                <ul>
+                    <li>
+                        <p>
+                            Dopet hålls i Vichtis församlingshus
+                            <strong>20.4.2024 kl. 14.00</strong>.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Ristiäiset pidetään Vihtin seurakunnantalolla
+                            <strong>20.4.2024 klo 14.00</strong>.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            The baptizing will take place in Vihti
+                            seurakuntatalo <strong>20.4.2024 at 14.00</strong>.
+                        </p>
+                    </li>
+                    <li>
+                        <p><strong>Niuhalanraitti 6, 03400 Vihti</strong></p>
+                    </li>
+                </ul>
             </div>
             <a href="#two" class="button style2 down anchored">Next</a>
         </section>
@@ -61,22 +74,39 @@
         <section id="two" class="main style2 left dark fullscreen">
             <div class="content box style2">
                 <header>
-                    <h3>
-                        Meddela om ditt deltagande. <br />
-                        Ilmoita osallistumisestasi. <br />
-                        Send us a message regarding your presence. <br />
-                    </h3>
+                    <ul>
+                        <li>
+                            <h3>Meddela om ditt deltagande.</h3>
+                        </li>
+                        <li>
+                            <h3>Send us a message regarding your presence.</h3>
+                        </li>
+                        <li>
+                            <h3>Ilmoita osallistumisestasi.</h3>
+                        </li>
+                    </ul>
                 </header>
-                <p>
-                    Meddela mamma-Julia (040 5526067) hur många som deltar och
-                    ifall ni har några allergier. <br /><br />
-
-                    Ilmoita mamma-Julialle (040 5526067) montako teitä on
-                    tulossa ja mahdolliset allergiat. <br /><br />
-
-                    Send a message to mamma-Julia (040 5526067) how many of you
-                    will participate and if you have any allergies. <br /><br />
-                </p>
+                <ul>
+                    <li>
+                        <p>
+                            Meddela mamma-Julia (040 5526067) hur många som
+                            deltar och ifall ni har några allergier.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Ilmoita mamma-Julialle (040 5526067) montako teitä
+                            on tulossa ja mahdolliset allergiat.
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Send a message to mamma-Julia (040 5526067) how many
+                            of you will participate and if you have any
+                            allergies.
+                        </p>
+                    </li>
+                </ul>
             </div>
             <a href="#work" class="button style2 down anchored">Next</a>
         </section>
@@ -100,82 +130,82 @@
                 <div class="gallery">
                     <article class="from-left">
                         <a href="images/fulls/01.jpg" class="image fit"
-                            ><img src="images/thumbs/01.jpg" alt=""
+                            ><img src="images/fulls/01.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/02.jpg" class="image fit"
-                            ><img src="images/thumbs/02.jpg" alt=""
+                            ><img src="images/fulls/02.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/03.jpg" class="image fit"
-                            ><img src="images/thumbs/03.jpg" alt=""
+                            ><img src="images/fulls/03.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/04.jpg" class="image fit"
-                            ><img src="images/thumbs/04.jpg" alt=""
+                            ><img src="images/fulls/04.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/05.jpg" class="image fit"
-                            ><img src="images/thumbs/05.jpg" alt=""
+                            ><img src="images/fulls/05.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/06.jpg" class="image fit"
-                            ><img src="images/thumbs/06.jpg" alt=""
+                            ><img src="images/fulls/06.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/07.jpg" class="image fit"
-                            ><img src="images/thumbs/07.jpg" alt=""
+                            ><img src="images/fulls/07.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/08.jpg" class="image fit"
-                            ><img src="images/thumbs/08.jpg" alt=""
+                            ><img src="images/fulls/08.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/09.jpg" class="image fit"
-                            ><img src="images/thumbs/09.jpg" alt=""
+                            ><img src="images/fulls/09.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/10.jpg" class="image fit"
-                            ><img src="images/thumbs/10.jpg" alt=""
+                            ><img src="images/fulls/10.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/11.jpg" class="image fit"
-                            ><img src="images/thumbs/11.jpg" alt=""
+                            ><img src="images/fulls/11.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/12.jpg" class="image fit"
-                            ><img src="images/thumbs/12.jpg" alt=""
+                            ><img src="images/fulls/12.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/13.jpg" class="image fit"
-                            ><img src="images/thumbs/13.jpg" alt=""
+                            ><img src="images/fulls/13.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/14.jpg" class="image fit"
-                            ><img src="images/thumbs/14.jpg" alt=""
+                            ><img src="images/fulls/14.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-left">
                         <a href="images/fulls/15.jpg" class="image fit"
-                            ><img src="images/thumbs/15.jpg" alt=""
+                            ><img src="images/fulls/15.jpg" alt=""
                         /></a>
                     </article>
                     <article class="from-right">
                         <a href="images/fulls/16.jpg" class="image fit"
-                            ><img src="images/thumbs/16.jpg" alt=""
+                            ><img src="images/fulls/16.jpg" alt=""
                         /></a>
                     </article>
                 </div>
@@ -186,23 +216,35 @@
         <section id="contact" class="main style3 secondary">
             <div class="content">
                 <header>
-                    <h3>
-                        Kärt barn har många namn, men nu har mamma och bố valt
-                        vad jag ska heta PÅRIKTIGT. <br />
-                        Vill du höra vad det är och fira tillfället tillsammans
-                        med mig? Kom på plats den 20.4! <br /><br />
-
-                        Rakkaalla lapsella on monta nimeä, mutta nyt mamma ja bố
-                        ovat valinneet minulle ihan OIKEAN nimen. <br />
-                        Haluatko kuulla mikä se on ja juhlistaa tilaisuutta
-                        kanssani? Tule paikalle 20.4! <br /><br />
-
-                        A loved child has many names, but now mamma and bố has
-                        chosen an ACTUAL name for me. <br />
-                        Do you want to hear what it is and celebrate the
-                        occasion with me? Be there on 20.4! <br />
-                    </h3>
-                    <p></p>
+                    <ul>
+                        <li>
+                            <h3>
+                                Kärt barn har många namn, men nu har mamma och
+                                bố valt vad jag ska heta PÅRIKTIGT. <br />
+                                Vill du höra vad det är och fira tillfället
+                                tillsammans med mig? Kom på plats den 20.4!
+                            </h3>
+                        </li>
+                        <br />
+                        <li>
+                            <h3>
+                                Rakkaalla lapsella on monta nimeä, mutta nyt
+                                mamma ja bố ovat valinneet minulle ihan OIKEAN
+                                nimen. <br />
+                                Haluatko kuulla mikä se on ja juhlistaa
+                                tilaisuutta kanssani? Tule paikalle 20.4!
+                            </h3>
+                        </li>
+                        <br />
+                        <li>
+                            <h3>
+                                A loved child has many names, but now mamma and
+                                bố has chosen an ACTUAL name for me. <br />
+                                Do you want to hear what it is and celebrate the
+                                occasion with me? Be there on 20.4!
+                            </h3>
+                        </li>
+                    </ul>
                 </header>
                 <!-- <div class="box">
           <form method="post" action="#">
