--- a/index.html
+++ b/index.html
@@ -22,11 +22,23 @@
                 <header>
                     <h2>Hej!</h2>
                 </header>
-                <p>
-                    Välkommen på mitt dop! <br />
-                    Tervetuloa ristiäisiini! <br />
-                    Welcome to my baptizing! <br />
-                </p>
+                <ul>
+                    <li>
+                        <p>
+                            Välkommen på mitt dop!
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Tervetuloa ristiäisiini!
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Welcome to my baptizing!
+                        </p>
+                    </li>
+                </ul>
                 <footer>
                     <a href="#one" class="button style2 down">More</a>
                 </footer>
